[project]
name = "openadr3-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick van der Burgt",email = "nick.van.der.burgt@elaad.nl"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "pandera[mypy] (>=0.23.1,<0.24.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)"
]
packages = [{include = "openadr3_client"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"